<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">I am a button</string>
    <string name="textview_message">Look at my GUI</string>
    <string name="check_message">Check this out!</string>
    <string name="check_button_message">Click here</string>
    <string name="switch_text">Switch on / off</string>
    <string name="enter_name_hint">Type here</string>
    <string name="switch_on">Switch is now on</string>
    <string name="switch_off">Switch is now off</string>
    <string name="Undo">Undo</string>
    <string name="toast_message">Here is more information</string>
    <string name="emailText">Enter your email address</string>
    <string name="passwordText">Type your password</string>
    <string name="emailHint">Enter your email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="profileWelcome">Your Profile</string>
    <string name="profileName">Your Name:</string>
    <string name="profileNameET">Enter your name</string>
    <string name="profileEmail">Your Email:</string>
    <string name="profileImageTV">Your Image:</string>
    <string name="imageHint">Click the button above to take a picture</string>
    <string name="chatButton">Go to Chat</string>
    <string name="sendButton">Send</string>
    <string name="recieveButton">Recieve</string>
    <string name="launchWeatherApp">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="isSentCheckText">is a Send Message</string>
    <string name="hideBtnText">Hide</string>
</resources>