<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"

    tools:context=".ProfileActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileWelcome" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileName" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/emailET2"
        android:hint="@string/profileNameET" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileEmail" />

    <EditText
        android:id="@+id/emailET2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:nextFocusUp="@id/editTextTextPersonName2"
        android:nextFocusDown="@id/chatButton"
        android:hint="@string/emailHint" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileImageTV" />

    <ImageButton
        android:id="@+id/profileImageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/picture_frame" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imageHint" />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusUp="@id/emailET2"
        android:nextFocusDown="@id/weatherButton"
        android:text="@string/chatButton" />

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusUp="@id/chatButton"
        android:text="@string/launchWeatherApp" />


</LinearLayout>