<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"

    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/textView"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_message"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/check_button_message" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_message" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="0px"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_text" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name_hint"
        android:inputType="textPersonName" />

</GridLayout>