<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_message"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_below="@id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/check_button_message" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_below="@id/textView"
        android:layout_toEndOf="@id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_message" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_below="@id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="0px"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_toEndOf="@id/imageButton"
        android:layout_below="@id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_text" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_below="@id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name_hint"
        android:inputType="textPersonName" />

</RelativeLayout>